# backend

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: push_image_to_dockerhub.yml  run_linter.yml  run_tests.yml
docs/: brif.md
infra/: .env-example  Dockerfile  backend-entrypoint  backend-entrypoint.sh  backend_entrypoint  docker-compose.local.yaml  nginx.conf.template
infra/backend/: Dockerfile  backend_entrypoint
infra/celery/: Dockerfile  celery_worker_entrypoint
requirements/: develop.txt  production.txt
src/api/: urls.py
src/api/v1/: apps.py  filters.py  pagination.py  serializers.py  urls.py  views.py
src/api/v1/tests/: test_views.py
src/api/v1/utils/: report_utils.py
src/configs/: celery.py  settings.py  urls.py
src/forecasts/: apps.py  errors.py  models.py
src/forecasts/management/commands/: fill_db.py  init_superuser.py
src/forecasts/migrations/: 0001_initial.py
src/forecasts/tasks/: __init__.py  forecast_tasks.py
src/forecasts/tests/test_models/: test_forecast_model.py  test_sale_model.py  test_sku_model.py  test_store_model.py
src/forecasts/tests/tests_model/: __init__.py  forecast_model_tests.py  sale_model_tests.py
src/forecasts/utils/: constants.py  csv_utils.py  report_utils.py
src/users/: admin.py  apps.py  models.py
src/users/management/commands/: init_superuser.py
src/users/migrations/: 0001_initial.py
